--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -38,8 +38,8 @@
         <div id="greeting">
             <% if (username != 'Guest') { %>
                 <a href="/user">
-                    <p class="font-white" id="top">Hi, <span class="font-peach"><%= username %>!</span></p>
-                    <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
+                    <p class="font-white" id="top">Hi, <span class="font-peach"><%= username %></span>!</p>
+                    <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City</span>!</p>
                 </a>
             <% } else { %>
                 <p class="font-white" id="top">Hi, Guest!</p>
