--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -28,13 +28,6 @@
 
     <!--right-side group-->
     <li class="top-child" id="user-child">
-        <!--light/dark mode-->
-        <!--<div id="mode">
-            <button id="color-theme" onclick="lightDarkMode()">
-                <img ondragstart="return false;" draggable="false" src="/img/light.png" id="theme-icon">
-            </button>
-        </div>-->
-        <!--greeting-->
         <div id="greeting">
             <% if (username != 'Guest') { %>
                 <a href="/user">
@@ -42,8 +35,10 @@
                     <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City</span>!</p>
                 </a>
             <% } else { %>
-                <p class="font-white" id="top">Hi, Guest!</p>
-                <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
+                <a href="/login">
+                    <p class="font-white" id="top">Hi, Guest!</p>
+                    <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
+                </a>
             <% } %>
         </div>
     </li>
