--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -18,7 +18,7 @@
                     <div id="userheadergroup">
                         <p class="font-white">Hi, <%= username %>!</p>
                         <a href = "/change-pass">
-                            <p class="font-white">Change Password?</p>
+                            <p class="font-peach">Change Password?</p>
                         </a>
                     </div>
                     <p class="font-white">Profile History</p>
