Hotfix in css and user page
In css,
- Matched effect of vertical cards with horizontal cards
- Widened search bar in responsiveness

In user page,
- Header as white
- header text as black except peach being neutral

--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -16,12 +16,12 @@
             <div id="userbody">
                 <div id="userheader">
                     <div id="userheadergroup">
-                        <p class="font-white">Hi, <%= username %>!</p>
+                        <p class="font-black">Hi, <%= username %>!</p>
                         <a href = "/change-pass">
                             <p class="font-peach">Change Password?</p>
                         </a>
                     </div>
-                    <p class="font-white">Profile History</p>
+                    <p class="font-black">Profile History</p>
                 </div>
                 <div id="user_places">
                     <p class="font-black" id="title">Here are the places you've visited</p>
