--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -359,10 +359,11 @@ input[type=search] {
     text-align: center;
     list-style-type: none;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .side-child>button>#side-menu {
-    padding-top: 7px;
+    padding-top: 3px;
 }
 
 .side-child>a>div>p {
@@ -392,6 +393,7 @@ input[type=search] {
 #sidebar-cover-button {
     width: 100%;
     height: 100%;
+    cursor: default;
 }
 
 #side-menu {
@@ -620,11 +622,11 @@ input[type=search] {
     border-radius: 20px;
 }
 
-.horizontalcard:hover {
+.horizontalcard:hover, #card-group:hover {
     transform: scale(1.021);
 }
 
-.horizontalcard:active {
+.horizontalcard:active, #card-group:active {
     transform: scale(0.95) rotateZ(1.1deg);
 }
 
@@ -1103,10 +1105,10 @@ input:focus {
     position: relative;
 }
 
-#card-group:hover {
+/* #card-group:hover {
     border-color: #F17C1E;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
-}
+} */
 
 #horizontal-card-group {
 
@@ -1224,7 +1226,7 @@ input:focus {
 }
 
 #userheader {
-    background: #1B1B1B;
+    background: white;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -1431,8 +1433,8 @@ input:focus {
     }
 
     .top-child {
-        margin-top: 3px;
-        margin-bottom: 3px;
+        margin-top: 7px;
+        margin-bottom: 7px;
     }
 
     #menu-child {
@@ -1464,7 +1466,6 @@ input:focus {
     .top-child>#search-bar>#search-bar-form {
         align-items: center;
         justify-content: center;
-        width: 210px;
     }
 
     #search-bar-input {
@@ -1531,5 +1532,13 @@ input:focus {
 
     .form-center-right{
         width: 100%;
+    }
+}
+
+@media (max-height: 779px){
+    .side-child a div p {
+        visibility: hidden;
+        height: 0;
+        margin: 0;
     }
 }
