Changes in design and deleted file
In design,
- Made all the card contents to be undraggable
- Set traffic's html and body height as 100vh to occupy browser screen

In deleted file,
- accommodate-page is unusable

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -182,7 +182,7 @@ a[data-href] {
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0px;
-    position: sticky;
+    position: fixed;
     width: 100%;
     top: 0;
     z-index: 1;
