--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -31,7 +31,7 @@
                         <button>Rating</button>
                     </div>-->                  
                     
-                    <div id="wraphorizontal">
+                    <div id="wraphorizontal" ondragstart="return false;" draggable="false">
                         <!-- fetch-accommodations-h.ejs -->
                         <%- include('../partials/fetch-accommodations-h'); %>
                     </div>
