--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -38,7 +38,7 @@
                         </div> -->
                     </div>
                     <!-- For each food from database -->
-                    <div id="wrap">
+                    <div id="wrap" ondragstart="return false;" draggable="false">
                         <!-- fetch-foods-v.ejs -->
                         <%- include('../partials/fetch-foods-v'); %>
                     </div>
