--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -37,7 +37,7 @@
                             <button>Date</button>
                         </div> -->
                         <!-- Just a dummy to show -->
-                        <div id="wraphorizontal">
+                        <div id="wraphorizontal" ondragstart="return false;" draggable="false">
                             <!-- fetch-places-h.ejs -->
                             <%- include('../partials/fetch-places-h'); %>
                         </div>
