--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -13,7 +13,7 @@
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
 
-            <div id="userbody">
+            <div id="userbody" ondragstart="return false;" draggable="false">
                 <div id="userheader">
                     <div id="userheadergroup">
                         <p class="font-black">Hi, <%= username %>!</p>
