--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -57,8 +57,8 @@
 
             <div id="home-highlights">
                 <div class="homebackground">
-                    <div class="two-vertical-panels">
-                        <div id="home-highlights-body" ondragstart="return false;" draggable="false">
+                    <div class="two-vertical-panels" ondragstart="return false;" draggable="false">
+                        <div id="home-highlights-body">
                             <p class="font-black" id="title">Iloilo City's Rich <span
                                     class="font-peach">History</span></p>
                             <p class="font-black" id="content"><span class="font-peach">Under Spanish colonization</span>
@@ -76,7 +76,7 @@
 
             <div id="home-highlights">
                 <div class="homebackground">
-                    <div class="two-vertical-panels">
+                    <div class="two-vertical-panels" ondragstart="return false;" draggable="false">
                         <div id="home-highlights-body">
                             <%- include('../partials/carousel'); %>
                         </div>
@@ -107,7 +107,7 @@
 
 
                             <div class="homecard">
-                                <img ondragstart="return false;" draggable="false" src="/img/travelguidepic.jpg" class="homecardimg" alt="">
+                                <img src="/img/travelguidepic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
                                     <h1 class="homecardtitle" id="title">Travel Guide</h1>
                                     <p class="homecardinfo" id="content">Here is a list of things to do in Iloilo! A compact travel guide to help you should you visit outside of Iloilo!</p>
@@ -116,7 +116,7 @@
                             </div>
 
                             <div class="homecard">
-                                <img ondragstart="return false;" draggable="false" src="/img/panaynewspic.jpg" class="homecardimg" alt="">
+                                <img src="/img/panaynewspic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
                                     <h1 class="homecardtitle" id="title">ILoilo Latest News</h1>
                                     <p class="homecardinfo" id="content">Access Panay News, the biggest daily newspaper in Western Visayas brings you breaking news on environment, nation, Metro Bacolod, Iloilo, and top stories from around the world.</p>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                             <div class="homecard">
-                                <img ondragstart="return false;" draggable="false" src="/img/localgovtpic.jpg" class="homecardimg" alt="">
+                                <img src="/img/localgovtpic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
                                     <h1 class="homecardtitle" id="title">Iloilo City Local Government</h1>
                                     <p class="homecardinfo" id="content">Access comprehensive information about your travel location!
@@ -136,7 +136,7 @@
                             </div>
 
                             <div class="homecard">
-                                <img ondragstart="return false;" draggable="false" src="/img/thingstodopic.jpg" class="homecardimg" alt="">
+                                <img src="/img/thingstodopic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
                                     <h1 class="homecardtitle" id="title">Things to do in Iloilo City</h1>
                                     <p class="homecardinfo" id="content">Learn more about the activities that Iloilo City has to offer with this comprehensive list of activities, each one a must add to your travel to-do list!</p>
